feat: added create / read endpoints for Cards
